--- a/Vector2RasterTests/AndroidManifest.xml
+++ b/Vector2RasterTests/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="g.p.v2r" />
+        android:targetPackage="g.p.v2r.test" />
 
     <application
         android:icon="@drawable/ic_launcher"
